save new loader

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -94,3 +94,4 @@
 		aria-label="Select page of periodic elements">
 	</mat-paginator>
 </div>
+<app-shared-loading [Loader]="Loader"></app-shared-loading>
